fix: mixin versioning